fix: 替换所有aistone.dpdns.org为aistone.org，统一域名后缀

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "AISTONE",
-      "url": "https://aistone.dpdns.org",
+      "url": "https://aistone.org",
       "description": "AI图片生成与语音合成平台，永久免费，支持中英文输入。",
       "inLanguage": ["zh-CN", "en"]
     }
