feat: 创建联系我们独立页面 - 新建 contact.html 页面，支持国际化中英文切换 - 更新所有页面导航栏链接指向 /contact.html - 优化 ui_handler.js 支持联系页面语言切换 - 添加新页面CSS样式，保持设计一致性

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - 关于我们，AI图片生成与语音合成平台介绍。">
-    <meta name="keywords" content="AISTONE, 关于, AI图片生成, AI语音合成, 免费AI工具, 团队介绍">
-    <title data-i18n="aboutModalTitle">关于 AISTONE</title>
+    <meta name="description" content="AISTONE - 联系我们，AI图片生成与语音合成平台客服支持。">
+    <meta name="keywords" content="AISTONE, 联系, 客服, AI图片生成, AI语音合成, 免费AI工具, 技术支持">
+    <title data-i18n="contactModalTitle">联系我们</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,12 +30,16 @@
     </nav>
     <div class="container">
         <main>
-            <section class="about-section" id="about">
-                <h2 data-i18n="aboutModalTitle">关于 AISTONE</h2>
-                <div data-i18n="aboutModalContent" class="about-content">
-                    AISTONE 是一个集成了文本生成图片与语音的智能工具平台，致力于为用户提供高效、便捷、免费的AI内容创作体验。<br><br>
-无论你是设计师、内容创作者，还是普通用户，只需输入一句描述，就能一键生成高质量的图片或语音。平台支持中英文输入，内置智能优化和多种生成参数，满足多样化的创作需求。<br><br>
-本项目基于先进的AI模型，结合云端算力，保证生成速度与质量。所有功能永久免费开放，界面简洁友好，适配多终端设备，助力每一位用户释放创意灵感。
+            <section class="contact-section" id="contact">
+                <h2 data-i18n="contactModalTitle">联系我们</h2>
+                <div data-i18n="contactModalContent" class="contact-content">
+                    如果您在使用 AISTONE 的过程中有任何问题或建议，欢迎随时与我们联系！<br><br>
+                    <b>产品反馈与建议：</b>我们非常重视您的体验和意见，任何功能建议或改进想法都欢迎反馈。<br>
+                    <b>技术支持：</b>遇到技术问题或使用障碍，请详细描述您的问题，我们会尽快协助解决。<br><br>
+                    您可以通过以下方式联系我们：<br>
+                    邮箱：<a href="mailto:support@aistone.org">support@aistone.org</a><br>
+                    官方网站：<a href="https://aistone.org" target="_blank">https://aistone.org</a><br><br>
+                    我们会在1-2个工作日内回复您的信息。感谢您的关注与支持！
                 </div>
             </section>
         </main>
