--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,7 +199,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="/about.html" id="about-link">About</a></li>
             <li><a href="/services.html" id="services-link">Services</a></li>
-            <li><a href="#contact" id="contact-link">Contact</a></li>
+            <li><a href="/contact.html" id="contact-link">Contact</a></li>
         </ul>
         <div class="navbar-right">
             <select id="lang-select" class="lang-select">
