--- a/frontend/services.html
+++ b/frontend/services.html
@@ -18,7 +18,7 @@
             <li><a href="/index.html" data-i18n="navHome">Home</a></li>
             <li><a href="/about.html" id="about-link" data-i18n="navAbout">About</a></li>
             <li><a href="/services.html" id="services-link" data-i18n="navServices">Services</a></li>
-            <li><a href="/index.html#contact" id="contact-link" data-i18n="navContact">Contact</a></li>
+            <li><a href="/contact.html" id="contact-link" data-i18n="navContact">Contact</a></li>
         </ul>
         <div class="navbar-right">
             <select id="lang-select" class="lang-select">
