更新关于页面内容，添加基于Pollinations.AI技术的描述，优化文案内容

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -33,9 +33,15 @@
             <section class="about-section" id="about">
                 <h2 data-i18n="aboutModalTitle">关于 AISTONE</h2>
                 <div data-i18n="aboutModalContent" class="about-content">
-                    AISTONE 是一个集成了文本生成图片与语音的智能工具平台，致力于为用户提供高效、便捷、免费的AI内容创作体验。<br><br>
-无论你是设计师、内容创作者，还是普通用户，只需输入一句描述，就能一键生成高质量的图片或语音。平台支持中英文输入，内置智能优化和多种生成参数，满足多样化的创作需求。<br><br>
-本项目基于先进的AI模型，结合云端算力，保证生成速度与质量。所有功能永久免费开放，界面简洁友好，适配多终端设备，助力每一位用户释放创意灵感。
+                    AISTONE 是一个基于 Pollinations.AI 技术的智能内容创作平台，集成了文本生成图片与语音功能，致力于为用户提供高效、便捷、免费的AI内容创作体验。<br><br>
+我们的平台支持文本生成图片、文本生成语音等多种创作功能。无论你是设计师、内容创作者，还是普通用户，只需输入一句描述，就能一键生成高质量的视觉内容或语音内容。平台支持中英文输入，内置智能优化和多种生成参数，满足多样化的创作需求。<br><br>
+平台特色：<br>
+• 100%免费使用，无需注册，无需API密钥，保护用户隐私<br>
+• 支持中英文输入，内置智能优化<br>
+• 多种生成参数可调，满足多样化创作需求<br>
+• 界面简洁友好，适配多终端设备<br>
+• 云端算力支持，保证生成速度与质量<br><br>
+本项目基于先进的AI模型，结合云端算力，保证生成速度与质量。我们相信AI技术应该普惠大众，因此所有功能永久免费开放，助力每一位用户释放创意灵感，实现从文字到视觉、从文字到语音的无限可能。
                 </div>
             </section>
         </main>
