优化联系页面内容，增加服务范围和联系方式，完善国际化支持

--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -34,11 +34,16 @@
                 <h2 data-i18n="contactModalTitle">联系我们</h2>
                 <div data-i18n="contactModalContent" class="contact-content">
                     如果您在使用 AISTONE 的过程中有任何问题或建议，欢迎随时与我们联系！<br><br>
-                    <b>产品反馈与建议：</b>我们非常重视您的体验和意见，任何功能建议或改进想法都欢迎反馈。<br>
-                    <b>技术支持：</b>遇到技术问题或使用障碍，请详细描述您的问题，我们会尽快协助解决。<br><br>
-                    您可以通过以下方式联系我们：<br>
-                    邮箱：<a href="mailto:support@aistone.org">support@aistone.org</a><br>
-                    官方网站：<a href="https://aistone.org" target="_blank">https://aistone.org</a><br><br>
+                    我们致力于为用户提供最优质的服务体验，无论是技术问题、功能建议还是合作咨询，我们都将认真对待并及时回复。<br><br>
+                    联系方式：<br>
+                    • 邮箱：<a href="mailto:support@aistone.org">support@aistone.org</a><br>
+                    • 官方网站：<a href="https://aistone.org" target="_blank">https://aistone.org</a><br>
+                    • 技术支持：24/7在线支持<br><br>
+                    服务范围：<br>
+                    • <b>产品反馈与建议：</b>我们非常重视您的体验和意见，任何功能建议或改进想法都欢迎反馈<br>
+                    • <b>技术支持：</b>遇到技术问题或使用障碍，请详细描述您的问题，我们会尽快协助解决<br>
+                    • <b>商务合作：</b>如果您有商务合作需求，欢迎通过邮箱联系我们<br>
+                    • <b>媒体采访：</b>媒体朋友如需采访或报道，请提前预约<br><br>
                     我们会在1-2个工作日内回复您的信息。感谢您的关注与支持！
                 </div>
             </section>
