--- a/frontend/index.html
+++ b/frontend/index.html
@@ -458,33 +458,33 @@
                     
                     <div>
                         <input type="checkbox" id="option-nologo" name="option-nologo" checked>
-                        <label for="option-nologo">Remove Logo (Watermark)</label>
+                        <label for="option-nologo" data-i18n="noLogo">Remove Logo (Watermark)</label>
                     </div>
                     <div>
-                        <label for="option-aspect-ratio">Aspect Ratio:</label>
+                        <label for="option-aspect-ratio" data-i18n="aspectRatio">Aspect Ratio:</label>
                         <select id="option-aspect-ratio" name="option-aspect-ratio">
-                            <option value="1:1" data-width="1024" data-height="1024" selected>Square (1:1 - 1024x1024)</option>
-                            <option value="16:9" data-width="1280" data-height="720">Landscape (16:9 - 1280x720)</option>
-                            <option value="9:16" data-width="720" data-height="1280">Portrait (9:16 - 720x1280)</option>
-                            <option value="4:3" data-width="1024" data-height="768">Standard (4:3 - 1024x768)</option>
-                            <option value="3:4" data-width="768" data-height="1024">Standard Vertical (3:4 - 768x1024)</option>
-                            <option value="custom">Custom Dimensions</option>
-                            <option value="16:9-2k" data-width="2560" data-height="1440">Landscape 2K (16:9 - 2560x1440)</option>
-                            <option value="9:16-2k" data-width="1440" data-height="2560">Portrait 2K (9:16 - 1440x2560)</option>
+                            <option value="1:1" data-width="1024" data-height="1024" selected data-i18n="aspectRatioSquare">Square (1:1 - 1024x1024)</option>
+                            <option value="16:9" data-width="1280" data-height="720" data-i18n="aspectRatioLandscape">Landscape (16:9 - 1280x720)</option>
+                            <option value="9:16" data-width="720" data-height="1280" data-i18n="aspectRatioPortrait">Portrait (9:16 - 720x1280)</option>
+                            <option value="4:3" data-width="1024" data-height="768" data-i18n="aspectRatioStandard">Standard (4:3 - 1024x768)</option>
+                            <option value="3:4" data-width="768" data-height="1024" data-i18n="aspectRatioStandardVertical">Standard Vertical (3:4 - 768x1024)</option>
+                            <option value="custom" data-i18n="aspectRatioCustom">Custom Dimensions</option>
+                            <option value="16:9-2k" data-width="2560" data-height="1440" data-i18n="aspectRatioLandscape2K">Landscape 2K (16:9 - 2560x1440)</option>
+                            <option value="9:16-2k" data-width="1440" data-height="2560" data-i18n="aspectRatioPortrait2K">Portrait 2K (9:16 - 1440x2560)</option>
                         </select>
                     </div>
                     <div id="custom-dimensions-container" style="display:none;">
-                        <label for="option-width">Width (px):</label>
+                        <label for="option-width" data-i18n="width">Width (px):</label>
                         <input type="number" id="option-width" name="option-width" placeholder="For example: 1024" min="256" max="2048" step="64">
-                        <label for="option-height">Height (px):</label>
+                        <label for="option-height" data-i18n="height">Height (px):</label>
                         <input type="number" id="option-height" name="option-height" placeholder="For example: 1024" min="256" max="2048" step="64">
                     </div>
                     <div>
-                        <label for="option-num-images">Quantity:</label>
+                        <label for="option-num-images" data-i18n="numImages">Quantity:</label>
                         <select id="option-num-images" name="option-num-images">
-                            <option value="1" selected>1 Image</option>
-                            <option value="2">2 Images</option>
-                            <option value="4">4 Images</option>
+                            <option value="1" selected data-i18n="oneImage">1 Image</option>
+                            <option value="2" data-i18n="twoImages">2 Images</option>
+                            <option value="4" data-i18n="fourImages">4 Images</option>
                         </select>
                     </div>
                 </div>
