大幅优化SEO：增加AISTONE关键词密度，添加品牌介绍页面，优化sitemap和robots.txt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AISTONE - Free AI Image Generator & Voice Synthesis Platform powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis, text-to-speech. No registration required, permanently free. Perfect for designers, content creators, marketers. High-quality AI image generation, commercial AI tools, online AI art software. 免费AI图片生成器与语音合成平台，基于Pollinations.AI技术。">
-    <meta name="keywords" content="AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,AI创作工具,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,智能图片生成,在线AI绘画,平面设计AI工具,插画AI生成,营销素材AI生成,教育AI工具,AI绘画模型,智能图像生成">
+    <meta name="keywords" content="AISTONE,AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,AISTONE AI,AISTONE image generator,AISTONE voice synthesis,AI创作工具,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,智能图片生成,在线AI绘画,平面设计AI工具,插画AI生成,营销素材AI生成,教育AI工具,AI绘画模型,智能图像生成">
     <title>AISTONE - Free AI Image Generator | Powered by Pollinations.AI | GPT Image FLUX DeepSeek | AI Art Creator | 免费AI图片生成器</title>
     
     <!-- Open Graph / Facebook -->
@@ -466,6 +466,32 @@
         </div>
     </section>
 
+    <!-- AISTONE 详细介绍部分 -->
+    <section class="aistone-intro" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 0; margin: 20px 0;">
+        <div class="container">
+            <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto;">
+                <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;">Welcome to AISTONE</h2>
+                <p style="font-size: 1.2em; line-height: 1.8; margin-bottom: 20px;">
+                    <strong>AISTONE</strong> is your premier destination for AI-powered image generation and voice synthesis. As a leading AI content creation platform, <strong>AISTONE</strong> combines cutting-edge technology with user-friendly design to deliver exceptional results.
+                </p>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE AI Image Generator</h3>
+                        <p>Experience the power of <strong>AISTONE's</strong> advanced AI models including GPT Image, FLUX, and DeepSeek for stunning visual creation.</p>
+                    </div>
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Voice Synthesis</h3>
+                        <p>Transform text into natural speech with <strong>AISTONE's</strong> state-of-the-art voice synthesis technology.</p>
+                    </div>
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Free Platform</h3>
+                        <p>Enjoy <strong>AISTONE's</strong> complete feature set completely free - no registration, no limits, no hidden costs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <div class="container">
         <main>
             <!-- 面包屑导航（仅在非首页显示） -->
@@ -702,6 +728,41 @@
                     <div class="faq-item" style="background:#262b35;border-radius:14px;box-shadow:0 2px 12px #0002;padding:22px 26px;min-height:110px;">
                         <h3 style="font-weight:bold;font-size:1.08em;margin-bottom:8px;color:#fff;" data-i18n="faqQ10">如何加入交流群或获取最新动态？</h3>
                         <div style="color:#e0e6f6;" data-i18n="faqA10">可关注官网、公众号或联系客服，获取交流群二维码和最新资讯。</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- AISTONE 品牌介绍 -->
+        <section class="aistone-brand" style="background: #1a1f2e; padding: 60px 0; margin: 40px 0;">
+            <div class="container">
+                <div style="text-align: center; color: white; max-width: 1000px; margin: 0 auto;">
+                    <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, #00CFFF, #667eea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">About AISTONE</h2>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">What is AISTONE?</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;">
+                                <strong>AISTONE</strong> is a revolutionary AI-powered platform that combines cutting-edge image generation and voice synthesis technologies. Founded with the vision of democratizing AI content creation, <strong>AISTONE</strong> provides free access to advanced AI models including GPT Image, FLUX, and DeepSeek.
+                            </p>
+                        </div>
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">AISTONE's Mission</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;">
+                                <strong>AISTONE</strong> is committed to making AI content creation accessible to everyone. Whether you're a professional designer, content creator, or just someone with creative ideas, <strong>AISTONE</strong> provides the tools you need to bring your vision to life without any barriers.
+                            </p>
+                        </div>
+                        <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">Why Choose AISTONE?</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;">
+                                <strong>AISTONE</strong> stands out with its commitment to privacy, quality, and accessibility. Our platform processes all content in real-time without storing user data, ensuring complete privacy while delivering professional-grade results powered by the latest AI technology.
+                            </p>
+                        </div>
+                    </div>
+                    <div style="margin-top: 40px; padding: 30px; background: rgba(0,207,255,0.1); border-radius: 15px; border: 1px solid rgba(0,207,255,0.3);">
+                        <h3 style="color: #00CFFF; margin-bottom: 20px; font-size: 1.8em;">AISTONE - Your AI Content Creation Partner</h3>
+                        <p style="font-size: 1.1em; line-height: 1.8; color: #e0e6f6;">
+                            Join thousands of users who trust <strong>AISTONE</strong> for their AI content creation needs. From stunning visual art to natural voice synthesis, <strong>AISTONE</strong> is your one-stop solution for all AI-powered creative projects. Experience the future of content creation with <strong>AISTONE</strong> today.
+                        </p>
                     </div>
                 </div>
             </div>
