修复：恢复详细介绍部分内容，确保页面完整性

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -474,6 +474,32 @@
         </div>
     </section>
 
+    <!-- AISTONE 详细介绍部分 -->
+    <section class="aistone-intro" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 0; margin: 20px 0;">
+        <div class="container">
+            <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto;">
+                <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;">Welcome to AISTONE</h2>
+                <p style="font-size: 1.2em; line-height: 1.8; margin-bottom: 20px;">
+                    <strong>AISTONE</strong> is your premier destination for AI-powered image generation and voice synthesis. As a leading AI content creation platform, <strong>AISTONE</strong> combines cutting-edge technology with user-friendly design to deliver exceptional results.
+                </p>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE AI Image Generator</h3>
+                        <p>Experience the power of <strong>AISTONE's</strong> advanced AI models including GPT Image, FLUX, and DeepSeek for stunning visual creation.</p>
+                    </div>
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Voice Synthesis</h3>
+                        <p>Transform text into natural speech with <strong>AISTONE's</strong> state-of-the-art voice synthesis technology.</p>
+                    </div>
+                    <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+                        <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Free Platform</h3>
+                        <p>Enjoy <strong>AISTONE's</strong> complete feature set completely free - no registration, no limits, no hidden costs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <div class="container">
